name:                keymonad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/edwardgeorge/keymonad#readme
license:             BSD3
license-file:        LICENSE
author:              Edward George
maintainer:          edwardgeorge@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Control.Arrow.Notation
                       Control.Arrow.Notation.EnvArrow
                       Control.Monad.Trans.Key
                       Data.KeyMap
                       Data.NameSupply
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
  default-language:    Haskell2010
  default-extensions:  GADTs
                       GeneralizedNewtypeDeriving
                       RankNTypes
                       TypeOperators

test-suite keymonad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , keymonad
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/edwardgeorge/keymonad
